--- a/18. Ecommerce App - Flutter/ecommerce/pubspec.yaml
+++ b/18. Ecommerce App - Flutter/ecommerce/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  curved_navigation_bar_with_label: ^2.1.4
 
 
   # The following adds the Cupertino Icons font to your application.
