--- a/18. Ecommerce App - Flutter/ecommerce/pubspec.yaml
+++ b/18. Ecommerce App - Flutter/ecommerce/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   curved_navigation_bar_with_label: ^2.1.4
+  easy_search_bar: ^2.5.0
 
 
   # The following adds the Cupertino Icons font to your application.
