--- a/18. Ecommerce App - Flutter/ecommerce/pubspec.yaml
+++ b/18. Ecommerce App - Flutter/ecommerce/pubspec.yaml
@@ -64,6 +64,7 @@ flutter:
   assets:
     - assets/images/bmlogo.png
     - assets/images/bellamore.png
+    - assets/images/banner1.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
