--- a/18. Ecommerce App - Flutter/ecommerce/pubspec.yaml
+++ b/18. Ecommerce App - Flutter/ecommerce/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   curved_navigation_bar_with_label: ^2.1.4
   easy_search_bar: ^2.5.0
+  carousel_slider: ^4.2.1
 
 
   # The following adds the Cupertino Icons font to your application.
