--- a/18. Ecommerce App - Flutter/ecommerce/pubspec.yaml
+++ b/18. Ecommerce App - Flutter/ecommerce/pubspec.yaml
@@ -68,6 +68,10 @@ flutter:
     - assets/images/banner/1.png
     - assets/images/banner/2.png
     - assets/images/banner/4.png
+    - assets/images/banner/3.png
+    - assets/images/banner/5.png
+    - assets/images/banner/6.png
+    - assets/images/banner/7.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
