--- a/18. Ecommerce App - Flutter/ecommerce/pubspec.yaml
+++ b/18. Ecommerce App - Flutter/ecommerce/pubspec.yaml
@@ -72,6 +72,12 @@ flutter:
     - assets/images/banner/5.png
     - assets/images/banner/6.png
     - assets/images/banner/7.png
+
+    - assets/images/products/1.jpg
+    - assets/images/products/2.jpg
+    - assets/images/products/3.jpg
+    - assets/images/products/4.jpg
+    - assets/images/products/5.jpg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
