--- a/18. Ecommerce App - Flutter/ecommerce/pubspec.yaml
+++ b/18. Ecommerce App - Flutter/ecommerce/pubspec.yaml
@@ -77,6 +77,7 @@ flutter:
     - assets/images/products/3.jpg
     - assets/images/products/4.jpg
     - assets/images/products/5.jpg
+    - assets/images/products/6.jpg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
