--- a/18. Ecommerce App - Flutter/ecommerce/pubspec.yaml
+++ b/18. Ecommerce App - Flutter/ecommerce/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   curved_navigation_bar_with_label: ^2.1.4
   easy_search_bar: ^2.5.0
   carousel_slider: ^4.2.1
+  http: ^1.2.1
 
 
   # The following adds the Cupertino Icons font to your application.
