new file:   18.1 Ecommerce App/Mobile/ecommerce/lib/home.dart 	modified:   18.1 Ecommerce App/Mobile/ecommerce/lib/main.dart 	new file:   18.1 Ecommerce App/Mobile/ecommerce/lib/product_details.dart 	modified:   18.1 Ecommerce App/Mobile/ecommerce/pubspec.lock 	modified:   18.1 Ecommerce App/Mobile/ecommerce/pubspec.yaml

--- a/18.1 Ecommerce App/Mobile/ecommerce/pubspec.yaml
+++ b/18.1 Ecommerce App/Mobile/ecommerce/pubspec.yaml
@@ -30,6 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^1.2.1
+  curved_navigation_bar_with_label: ^2.1.4
+
 
 
   # The following adds the Cupertino Icons font to your application.
