--- a/18. Ecommerce App - FlutterAndDjango/Mobile/ecommerce/pubspec.yaml
+++ b/18. Ecommerce App - FlutterAndDjango/Mobile/ecommerce/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   easy_search_bar: ^2.5.0
   carousel_slider: ^4.2.1
   http: ^1.2.1
+  flutter_dotenv: ^5.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
