--- a/18. Ecommerce App - FlutterAndDjango/Mobile/ecommerce/pubspec.yaml
+++ b/18. Ecommerce App - FlutterAndDjango/Mobile/ecommerce/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   carousel_slider: ^4.2.1
   http: ^1.2.1
   flutter_dotenv: ^5.1.0
+  badges: ^3.1.2
 
 
   # The following adds the Cupertino Icons font to your application.
