--- a/18. Ecommerce App - FlutterAndDjango/Mobile/ecommerce/pubspec.yaml
+++ b/18. Ecommerce App - FlutterAndDjango/Mobile/ecommerce/pubspec.yaml
@@ -36,11 +36,13 @@ dependencies:
   http: ^1.2.1
   flutter_dotenv: ^5.1.0
   badges: ^3.1.2
+  shared_preferences: ^2.2.3
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  
 
 dev_dependencies:
   flutter_test:
