--- a/19.1 Ecommerce App/Mobile/ecommerce/pubspec.yaml
+++ b/19.1 Ecommerce App/Mobile/ecommerce/pubspec.yaml
@@ -30,14 +30,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^1.2.1
   curved_navigation_bar_with_label: ^2.1.4
-
+  easy_search_bar: ^2.5.0
+  carousel_slider: ^4.2.1
+  http: ^1.2.1
+  flutter_dotenv: ^5.1.0
+  badges: ^3.1.2
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
@@ -62,10 +66,22 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
+  assets:
+    - assets/images/bmlogo.png
+    - assets/images/bellamore.png
+    - assets/images/banner/1.png
+    - assets/images/banner/2.png
+    - assets/images/banner/4.png
+    - assets/images/banner/3.png
+    - assets/images/banner/5.png
+    - assets/images/banner/6.png
+    - assets/images/banner/7.png
+    - assets/images/products/1.jpg
+    - assets/images/products/2.jpg
+    - assets/images/products/3.jpg
+    - assets/images/products/4.jpg
+    - assets/images/products/5.jpg
+    - assets/images/products/6.jpg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
